# platform.adaptation.emulator.emulator-daemon

./: .gitignore  CMakeLists.txt  NOTICE  emuld.manifest  emuld.service
debian/: changelog  control  emuld.postinst.in
include/: emuld.h  emuld_common.h  emuld_proc.h  evdi.h  evdi_protocol.h  libemuld.h  log.h  mobile.h  synbuf.h  tv.h  wearable.h
packaging/: emulator-daemon.spec  emuld.manifest  emuld.spec  emuld_wearable.manifest
src/: client.cpp  common.cpp  common_dev.cpp  device.cpp  emuld.c  emuld.cpp  emuld_proc.cpp  evdi.cpp  get_status.c  get_status.cpp  log.cpp  mobile.cpp  mobile_dev.cpp  msgproc_cmd.cpp  msgproc_hds.cpp  msgproc_location.cpp  msgproc_package.cpp  msgproc_suspend.cpp  msgproc_system.cpp  msgproc_vconf.cpp  net.cpp  stub.cpp  tv.cpp  wearable.cpp  wearable_dev.cpp
src/libemuld/: CMakeLists.txt  libemuld.cpp  libemuld.pc.in  msgproc.cpp
